# fsdl-text-recognizer-2022-labs

./: pyproject.toml
lab01/notebooks/: lab01_pytorch.ipynb  lab01_pytorch_self.ipynb
