[tool.flake8]  # configured in .flake8
[tool.darglint]  # configured in .flake8

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["training/logs"]

[tool.pytest.ini_options]
markers = [
	"slow: marks a test as slow (deselect with '-m \"not slow\"']",
	"data: marks a test as dependent on a data download (deselect with '-m \"not data\"')"
]
addopts = "--cov training --cov text_recognizer --cov-branch --doctest-modules --ignore training/logs -m 'not data' --ignore-glob **/bootstrap.py"
[tool.poetry]
name = "fsdl-text-recognizer-2022-labs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
numpy = "^1.23.1"
Pillow = "^9.2.0"
torch = "^1.12.1"
requests = "^2.28.1"
ipykernel = "^6.15.1"
wandb = "^0.13.1"
torchvision = "^0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
